# -Sales-Call-Copilot-RAG-over-Transcripts

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
tests/: conftest.py  test_pipeline.py
utils/: embeddings.py  ingestion.py  prompts.py  retrieval.py
